--- a/src/pages/Home/components/ClassCard/styles.module.css
+++ b/src/pages/Home/components/ClassCard/styles.module.css
@@ -1,3 +1,21 @@
 .container{
-  background-color: aqua;
+  background-color: #dff9fb;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 200px;
+  border: 1px solid #535c68;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.imageContainer{
+  background-color: black;
+  height: fit-content;
+  border: 1px solid black;
+}
+
+img {
+  object-fit: cover;
+  border: 1px solid #535c68;
 }
