--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -1,5 +1,6 @@
 .cardContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
+  margin: 20px;
 }
