--- a/src/pages/Auth/styles.module.css
+++ b/src/pages/Auth/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 100px;
+  padding: 35px;
 }
 
 .title{
@@ -11,4 +11,12 @@
 
 .button {
   margin: 10px 0 0 0;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
